tests/builtin_collision_const_allocator_bad.stderr
tests/builtin_collision_const_allocator_bad.sl:2:7: error: SL2001: duplicate definition 'MemAllocator'
lib/builtin/types.sl:47:12: hint: SL2001: other declaration of 'MemAllocator'
